Update project name in package.json and revise design system color variables in index.css.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite_react_shadcn_ts",
+  "name": "bazario-store-owner-hub",
   "private": true,
   "version": "0.0.0",
   "type": "module",
